[gd_scene load_steps=4 format=3 uid="uid://7do5qk8fxmuy"]

[ext_resource type="Texture2D" uid="uid://dnmv5o1lwlm6u" path="res://addons/hexmap/icons/ZoomLess.svg" id="1_8geid"]
[ext_resource type="Script" path="res://addons/hexmap/gui/zoom_widget.gd" id="1_ynrx2"]
[ext_resource type="Texture2D" uid="uid://baxlxhhdf40su" path="res://addons/hexmap/icons/ZoomMore.svg" id="2_vq7es"]

[node name="ZoomWidget" type="HBoxContainer"]
size_flags_horizontal = 6
theme_override_constants/separation = -4
script = ExtResource("1_ynrx2")

[node name="ZoomOutButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("1_8geid")
flat = true

[node name="ZoomLabel" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "100.0%"
flat = true
alignment = 2

[node name="ZoomInButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_vq7es")
flat = true
